# adventofcode-2022

./: .gitignore  Cargo.toml
src/: day-1.rs  day-2p1.rs  day-2p2.rs  day-3p1.rs  day-3p2.rs  day-4.rs  day-5p1.rs  day-5p2.rs  day-6.rs  day-7.rs
src/alternates/: day-3p2.cpp
