[package]
name = "adventofcode-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day-1"
path = "src/day-1.rs"

[[bin]]
name = "day-2p1"
path = "src/day-2p1.rs"

[[bin]]
name = "day-2p2"
path = "src/day-2p2.rs"

[[bin]]
name = "day-3p1"
path = "src/day-3p1.rs"

[[bin]]
name = "day-3p2"
path = "src/day-3p2.rs"

[[bin]]
name = "day-4"
path = "src/day-4.rs"

[[bin]]
name = "day-5p1"
path = "src/day-5p1.rs"

[[bin]]
name = "day-5p2"
path = "src/day-5p2.rs"

[[bin]]
name = "day-6"
path = "src/day-6.rs"
